# uinput-simulation

./: Cargo.toml  README.md  release.sh
assets/: manifest.json
assets/propertyInspector/: uinputSimulation.html
src/: main.rs  uinput.rs  uinput_simulation.rs
src/uinput/: device.rs  mod.rs  types.rs
