[package]
name = "havner-toolbox"
authors = [ "Lukasz Pawelczyk (havner)" ]
license = "GPL-3.0-or-later"
edition = "2024"

[dependencies]
openaction = "2.6"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
serde = "1.0"
serde_json = "1.0"
ron = "0.12"
evdev = { version = "0.13", features = [ "serde" ] }
tokio = { version = "1.48", features = [ "full" ] }
os_pipe = "1.2"
